--- a/sf/2BA1/math1.tex
+++ b/sf/2BA1/math1.tex
@@ -3,16 +3,16 @@
 
 \section{Question 1}
 
-Prove that$(3n)! \leq 27(n!)^3$ for all $n \in N$
+Prove that$(3n)! \leq {27}^n(n!)^3$ for all $n \in N$
 
 The formula holds for n=1.
 Suppose the formula holds for $m=n$ where m is some natural number.
-\[ (3m)! \leq 27(m!)^3 \]
-Then \[(3(m + 1))! \leq 27((m + 1)!)^3\]
-\[(3m)!(3m + 3)(3m + 2)(3m + 1) \leq 27{((m!)(m + 1))}^3\]
-\[(3m)!(3m + 3)(3m + 2)(3m + 1) \leq 27({(m!)}^3{(m + 1)}^3)\]
+\[ (3m)! \leq {27}^m(m!)^3 \]
+Then \[(3(m + 1))! \leq {27}^{m + 1}((m + 1)!)^3\]
+\[(3m)!(3m + 3)(3m + 2)(3m + 1) \leq (27)(27)^m{((m!)(m + 1))}^3\]
+\[(3m)!(3m + 3)(3m + 2)(3m + 1) \leq (27)(27)^m({(m!)}^3{(m + 1)}^3)\]
 \\*
-But \[(3m)! \leq 27(m!)^3\]
+But \[(3m)! \leq 27^m(m!)^3\]
 \\*
 Which leaves \[(3m + 3)(3m + 2)(3m + 1) \leq 27{(m + 1)}^3\]
 \[27{m}^3 + 54{m}^2 + 33m + 6 \leq 27{m}^3 + 81{m}^2 + 81m + 27\]
