--- a/trunk/sf/2BA1/math1.tex
+++ b/trunk/sf/2BA1/math1.tex
@@ -45,8 +45,9 @@ We have shown that the sets $(A \cup B) \backslash (A \cap B)$ and $(A \backslas
 have the same elements, and thus that $(A \cup B) \backslash (A \cap B) = (A \backslash B) \cup (B \backslash A)$.
 
 \section{Question 3}
+Let $Q$ and $R$ be the relations on the set $N$ of strictly positive integers.
 \subsection{Relation Q on N}
-\begin{enumerate}
+\begin{enumerate} 
   \item    The relation $Q$ on $N$ is not reflexive as \[(1)^2 - (1)^2 = 2^k\]
 \[1 - 1 = 2^k\]
 \[0 = 2^k\]
@@ -107,7 +108,7 @@ Therefore for $x,y$ to satisfy $xRy$ and $yRx$, $k$ must equal $0$. $k = 0$ if a
  The there exists $k,l \in N$ such that $\frac{x^2}{y^2} = 2^k$ and $\frac{y^2}{z^2} = 2^l$. Assume $\frac{x^2}{z^2} = 2^m$.
   \[x^2 = 2^k.y^2 , z^2 = \frac{y^2}{2^l}\]
   \[\frac{(2^k.y^2)}{\frac{y^2}{2^l}} = 2^m\]
-  \[\frac{2^k.y^2.2^k}{y^2}\]
+  \[\frac{2^k.y^2.2^l}{y^2}\]
   \[2^k.2^l = 2^m\]
   \[2^{k + l} = 2^m\]
   Therefore the relation is transitive as all three terms are a factor of xRz.
@@ -117,19 +118,23 @@ Therefore for $x,y$ to satisfy $xRy$ and $yRx$, $k$ must equal $0$. $k = 0$ if a
   The relation $R$ is not symmetric, therefore it is not an equivalence relation.
 As it is not anti-symmetric, the relation $R$ is not a partial order.
 \end{enumerate}
-\section{Question 4}
+\section{Question 4} 
 Let $x,y \in [0,+\infty)$. If $x < y$ then $\frac{1}{1 + x^2} > \frac{1}{1 + y^2}$. 
 If $x > y$ then $\frac{1}{1 + x^2} < \frac{1}{1 + y^2}$. If $x \not= y$ then either 
 $\frac{1}{1 + x^2} > \frac{1}{1 + y^2}$ or $\frac{1}{1 + x^2} < \frac{1}{1 + y^2}$. It follows that $f(x) \not= f(y)$.
 Therefore the function is injective.
 \\*
 \\
-Given any $y \in (0,1]$ there exists an $x \in [0,+\infty]$ such that $x = \sqrt{\frac{1}{y} -1}$.
+Given any $y \in (0,1]$ there exists an $x \in [0,+\infty)$ such that $x = \sqrt{\frac{1}{y} -1}$.
+\[\sqrt{\frac{1}{\frac{1}{1 + x^2}}} -1 \]
+\[\sqrt{x^2 + 1 - 1} \]
+\[\sqrt{x^2}\]
+\[x\]
 As $f$ has an inverse, it follows that $f$ is also surjective.
 \\*
 \\
 As shown above the function has an inverse, it follows that the function is surjective and therefore bijective, 
 as per theorem 2.4.
-It has an inverse, such that $f^{-1} =  \sqrt{\frac{1}{y} -1}$.
+Again, it's inverse is $f^{-1} =  \sqrt{\frac{1}{y} -1}$.
 
 \end{document}
