--- a/trunk/sf/2BA1/cover.tex
+++ b/trunk/sf/2BA1/cover.tex
@@ -1,11 +1,14 @@
 \documentclass[a4paper,12pt]{article}
 \begin{document}
-\begin{center}
-{\large Steven Diviney} \\*
-08462267 \\*
-CS2012 \\*
-Ring Buffer \\*
 
+\begin{center}
+
+{\large Steven Diviney}
+\\*
+08462267
+\\*
+MA2C01
 \end{center}
+
 
 \end{document}
