--- a/trunk/sf/cover.tex
+++ b/trunk/sf/cover.tex
@@ -1,11 +1,19 @@
 \documentclass[a4paper,12pt]{article}
 \begin{document}
 \begin{center}
-{\large Steven Diviney} \\*
-08462267 \\*
-CS2014 \\*
-RPN \\*
-
+{\large Design Patterns \\* \newline
+Group 10 \\*
+Facade \\*
+Group A} \\* \newline
+Steven Diviney \\*
+Sean MacGillicuddy \\*
+Brian Conor Hanratty \\*
+\newline
+{\large Group B }\\* \newline
+David Christopher Doran \\* 
+Taiyr Aidabulov \\*
+Maurice Ryan \\*
+Eoin Ryan \\*
 \end{center}
 
 \end{document}
