--- a/trunk/sf/cover.tex
+++ b/trunk/sf/cover.tex
@@ -1,19 +1,10 @@
 \documentclass[a4paper,12pt]{article}
 \begin{document}
 \begin{center}
-{\large Design Patterns \\* \newline
-Group 10 \\*
-Facade \\*
-Group A} \\* \newline
+{\large CS2014} \\*
+Spam detector \\*
 Steven Diviney \\*
-Sean MacGillicuddy \\*
-Brian Conor Hanratty \\*
-\newline
-{\large Group B }\\* \newline
-David Christopher Doran \\* 
-Taiyr Aidabulov \\*
-Maurice Ryan \\*
-Eoin Ryan \\*
+08462267\\*
 \end{center}
 
 \end{document}
