Lab done, minus user input. Fuck it.

--- a/sf/cover.tex
+++ b/sf/cover.tex
@@ -2,7 +2,7 @@
 \begin{document}
 \begin{center}
 {\large CS2014} \\*
-Spam detector \\*
+Linked Lists \\*
 Steven Diviney \\*
 08462267\\*
 \end{center}
