--- a/trunk/sf/cover.tex
+++ b/trunk/sf/cover.tex
@@ -1,8 +1,9 @@
 \documentclass[a4paper,12pt]{article}
 \begin{document}
+\pagestyle{empty}
 \begin{center}
-{\large CS2014} \\*
-Linked Lists \\*
+{\large CS2015} \\*
+Labs 9, 10 and 11\\*
 Steven Diviney \\*
 08462267\\*
 \end{center}
