--- a/trunk/js/3071/assign1/Grammer.tex
+++ b/trunk/js/3071/assign1/Grammer.tex
@@ -9,8 +9,8 @@ CS3071 \\*
 \end{center}
 \clearpage
 
-\section{Attributed Translation Grammer}
-Using \{\} to denote iteration and (..) to denote semantic actions as per Coco R
+\section{Attributed Translation Grammar}
+Using \{\} to denote iteration and (..) to denote semantic actions as per Coco/R
 \vspace{2 mm}
 \[ <Calc> \Rightarrow \{Ident_{p} := <Expr>_{q};\} (. Assign\hspace{1 mm} s,t .) \]
 \[s \Leftarrow q \hspace{2 pc}  t \Leftarrow p \]
@@ -55,5 +55,8 @@ Using \{\} to denote iteration and (..) to denote semantic actions as per Coco R
 \vspace{2 mm}
 \[ <Expon>_{p} \Rightarrow ( Expr_{q} ) \]
 \[ p \Leftarrow q \]
+\clearpage
 
+A draft attributed translation grammar was designed based on the inputs and operations to be performed by the interpreter. The goal was to construct a basic calculator able to process simple arithmetic expressions a single line at a time. The calculator also required some basic memory to store variables. A simple map between the variable name and it's value was used. After initial construction and testing the grammar was refined into that which is presented above. The draft grammar lacked any operator precedence and additional productions were need. The grammar was constructed so as to give identical results to the example in the assignment, but additional tests were also performed.\\*
+Compile.cpp contains the programs main method. A line is read from the user and passed to a new Scanner object which is then passed to a new Parser object. The input is then parsed. New Scanner and Parser objects are created with every new line. This seemed like the simplest way to read from stdin without having to press CTRL-D after a line was entered. A map is also created, it's reference passed to each new Parser as they are created.
 \end{document}
