--- a/trunk/Cover_Letter.tex
+++ b/trunk/Cover_Letter.tex
@@ -14,11 +14,12 @@
 February 20, 2010\\*\vspace{10 mm}
 Dear Sir/Madam
 \end{flushleft}
-I am writing in response to your advertised internship position for the post of NAME OF POST
+I am writing in response to your advertised internship position for the post of Software Engineer Intern.
 
 I am a third year student in Trinity College Dublin studying Computer Science, and expect to graduate in the summer of 2011 with a II.I or higher.
 I am looking to peruse an internship with your company during the summer and autumn of 2010. 
-I will be available for employment from from June until September. I am particularly interested in the advertised post because MAKE SHIT UP\\*
+I will be available for employment from from June until September. I am particularly interested in the advertised post because I would love to work as part of one of the leading companies in IT.
+\\*
 \\*
 I have enclosed my curriculum vitae. If you need any further information, please do not hesitate to contact me. I look forward to hearing from you.\\*
 
