--- a/trunk/Cover_Letter.tex
+++ b/trunk/Cover_Letter.tex
@@ -7,18 +7,20 @@
    Sutton \\
    Dublin 13 \\
    0863807768 \\
-   divines@tcd.ie \\* \vspace{10 mm}
+   divoapple@gmail.com \\* \vspace{10 mm}
 \end{flushright}
 \begin{flushleft}
  
 February 20, 2010\\*\vspace{10 mm}
 Dear Sir/Madam
 \end{flushleft}
-I am writing in response to your advertised internship position for the post of Software Engineer Intern.
+I am writing in response to your advertised internship position for the post of QA Intern.
 
 I am a third year student in Trinity College Dublin studying Computer Science, and expect to graduate in the summer of 2011 with a II.I or higher.
 I am looking to peruse an internship with your company during the summer and autumn of 2010. 
-I will be available for employment from from June until September. I am particularly interested in the advertised post because I would love to work as part of one of the leading companies in IT.
+I will be available for employment from from June until September. I am particularly interested in the advertised post because I would love to work as part of CCP in Iceland. 
+While I do not currently have an active Eve Online account, I have played it previously and was blown away by nearly every aspect of it. The thing I find most impresive is the continued development of the game, using new technologies as they become available. The clever tricks used to get Eve Online to run on low end hardware, and run very well, are amazing.\\
+I realise my location may make the application process somewhat difficult, but I hope you will consider me all the same.
 \\*
 \\*
 I have enclosed my curriculum vitae. If you need any further information, please do not hesitate to contact me. I look forward to hearing from you.\\*
