--- a/trunk/cv.tex
+++ b/trunk/cv.tex
@@ -8,12 +8,12 @@
    Sutton \\
    Dublin 13 \\
    0863807768 \\
-   divines@tcd.ie \\* \vspace{10 mm}
+   divoapple@gmail.com \\* \vspace{10 mm}
 \end{flushright}
 \begin{flushleft}
 
 {\LARGE\bf Steven Diviney} \\* \vspace{10mm}
-\section{Objective:}    Dependable, energetic and hard working student studying computer science, looking for internship opportunities in a reputed organisation.
+\section{Objective:}    Dependable, energetic and hard working third year student studying computer science at Trinity College Dublin, looking for internship opportunities in a reputed organisation.
 \section{Experience:}
 \subsection{GeSCI} Co-developed open-source software to assist with the calculation of ICT costs across a country. Software is now deployed in several Ministry's of Education across Africa, distributed freely from GeSCIs website. 
 \subsection{Freelance Graphic Design} Notable aspects include:\\
@@ -32,7 +32,7 @@ Presently perusing B.A. mod in Computer Science. Expected to graduate in summer 
 Junior Freshman achieved II.I\\
 Senior freshman achieved II.II\\
 \section{Skills}GNU/Linux (primary Debian), Windows 7,  Vista, XP \\ 
-Good level of experience programming in C/C++, Java and Bash. In addition I have some experience / working knowledge of Python, VHDL, HTML, CSS, PHP, Eiffel and Prolog. 
+Good level of experience programming in C/C++, Java, and Bash . In addition I have some experience / working knowledge of Python, VHDL, HTML, CSS, PHP, Eiffel, Oracle DBMS and Prolog. 
 \section{Interests}My interests include but are not limited to computer programming, Unix based operating systems, graphic design, photography and embedded systems . I also have a small amount of experience with web-design. An example of some of my work can be found at netsoc.tcd.ie/~divines
 \section{References}Can be provided upon request
 
