--- a/Cover_Letter.tex
+++ b/Cover_Letter.tex
@@ -14,13 +14,11 @@
 February 20, 2010\\*\vspace{10 mm}
 Dear Sir/Madam
 \end{flushleft}
-I am writing in response to your advertised internship position for the post of QA Intern.
+I am writing in response to your advertised internship position between February 2012 to August 2012.
 
-I am a third year student in Trinity College Dublin studying Computer Science, and expect to graduate in the summer of 2011 with a II.I or higher.
-I am looking to peruse an internship with your company during the summer and autumn of 2010. 
-I will be available for employment from from June until September. I am particularly interested in the advertised post because I would love to work as part of CCP in Iceland. 
-While I do not currently have an active Eve Online account, I have played it previously and was blown away by nearly every aspect of it. The thing I find most impresive is the continued development of the game, using new technologies as they become available. The clever tricks used to get Eve Online to run on low end hardware, and run very well, are amazing.\\
-I realise my location may make the application process somewhat difficult, but I hope you will consider me all the same.
+I am a fourth year student in Trinity College Dublin studying Computer Science, and expect to graduate from my undergraduate degree course in the summer of 2012 with a I.I. I then plan to go on a pursue a masters in computer science.\\
+I am particularly interested in the advertised post because I would love to work in consulting. The idea of working with new clients and technologies on a regular basis is one that greatly appeals to be.\\
+I feel I am suited to the position because I have very good teamwork, communication and presentation skills. I spent the previous summer working for IBM, which helped develop these skills greatly. In addition I have very good technical skills as outlined in my curriculum vitae. I am based in Dublin but moving around the country is not a problem for me.
 \\*
 \\*
 I have enclosed my curriculum vitae. If you need any further information, please do not hesitate to contact me. I look forward to hearing from you.\\*
@@ -34,10 +32,3 @@ Steven Diviney\\
 \end{document}
 
 
-
-
-
-
-
-
-\end{document}
