--- a/trunk/cvNew.tex
+++ b/trunk/cvNew.tex
@@ -14,6 +14,38 @@
 \pagestyle{fancy} % set pagestyle for the document
 
 \begin{document} 
+
+\begin{flushright}
+   Steven Diviney \\
+   14 Strand Road \\
+   Sutton \\
+   Dublin 13 \\
+   0863807768 \\
+   divoapple@gmail.com \\* \vspace{10 mm}
+\end{flushright}
+\begin{flushleft}
+ 
+February 20, 2010\\*\vspace{10 mm}
+Dear Sir/Madam
+\end{flushleft}
+I am writing in response to your advertised internship position between February 2012 to August 2012.
+
+I am a fourth year student in Trinity College Dublin studying Computer Science, and expect to graduate from my undergraduate degree course in the summer of 2012 with a I.I. I then plan to go on a pursue a masters in computer science.\\
+I am particularly interested in the advertised post because I would love to work in consulting. The idea of working with new clients and technologies on a regular basis is one that greatly appeals to be.\\
+I feel I am suited to the position because I have very good teamwork, communication and presentation skills. I spent the previous summer working for IBM, which helped develop these skills greatly. In addition I have very good technical skills as outlined in my curriculum vitae. I am based in Dublin but moving around the country is not a problem for me.
+\\*
+\\*
+I have enclosed my curriculum vitae. If you need any further information, please do not hesitate to contact me. I look forward to hearing from you.\\*
+
+\begin{flushleft}
+Yours faithfully\\\vspace{10mm}
+
+Steven Diviney\\
+\end{flushleft}
+
+
+\newpage
+
 \thispagestyle{empty} % this page does not have a header
 \name{Steven Diviney}
 \address{14 Strand Road\\
@@ -24,21 +56,42 @@ divoapple@gmail.com}
 
 
 
+
+
+
 \begin{resume}
 \vspace{0.1in}
 \moveleft.5\sectionwidth\centerline{Objective: Fourth year Computer Science student looking for internship opportunities in a reputed organization.}  
 
+
+\section{Education}
+\vspace{0.1in} 
+ 
+    Trinity College, Dublin, BA(mod), MCs.\\ 
+    Computer Science, 2008 - Present\\
+    
+    Expected to graduate B.A.mod with I.I\\
+    Junior Sophister achieved II.I \\
+    Senior Freshman achieved II.II\\
+    Junior Freshman achieved II.I\\
+ 
+    Sutton Park, Sutton, Dublin, 2002 - 2008,\\
+    Leaving certificate obtained in 2008.\\
+    All subjects sat at honors level, B1 obtained in Mathematics.\\
+    GCSE in ICT obtained in 2006.\\
+    
+
 \section{Experience} 
 \vspace{0.1in}
      
-    {\bf IBM Ireland, 2011 }Summer internship for 3 months at IBM Ireland as part of their Extreme Blue internship program. Worked on a web application as part of a team of four. The project was voted second out of over twenty at the end of the internship. As well as creating the application we were required to give a weekly update presentation to our managers and co-workers.
+    {\bf IBM Ireland, 2011 }Summer internship for 3 months at IBM Ireland as part of their Extreme Blue internship program. Worked on a mobile web application as part of a team of four. The project was voted second out of over twenty at the end of the internship. As well as creating the application we were required to give a weekly update presentation to our managers and co-workers. Developed skills in computer programming, teamwork, and communication with management and architects in order to design and plan the project, in addition to making sure the project was on track and mile-stones were being met.\\
+     The team was assigned to build a mobile web application to enable civic collaboration. The design, implementation and delegation of responsibility was left almost entirely up to the team, drawing support from staff in IBM. The project was constrained, but required a lot more critical thinking than being simply given a design document to implement. This approach was very beneficial as it allowed us as a team to develop a broader skill set, while drawing from industry experts with years of experience and working as part of a large organization.
  
-    {\bf GeSCI, 2010} Co-developed open-source software to assist with the calculation of ICT costs across a country. The software is now deployed in several Ministry's of Education across Africa, distributed freely from GeSCIs website. I was responsible for creating the front-end.
+    {\bf GeSCI, 2010} Co-developed open-source software to assist with the calculation of ICT costs across a country. The software is now deployed in several Ministry's of Education across Africa, distributed freely from GeSCIs website. I was responsible for creating the front-end. Worked as part of a team of six, three programmers and three managers / architects. Developed skills in computer programming and teamwork. In addition to my role as programmer I attended most of the meetings with the client in order to ensure what we were building was what they wanted. Developed skills in translating user requirements into a final design that was implemented.
 
-    {\bf Dangerous Goods Safety Advisor, 2010 - Present} I am responsible for ensuring that two organizations adhere to the requirements set out by the European Agreement concerning the International Carriage of Dangerous Goods by Road. Notable aspects include inspection of sites to ensure regulations are being adhered too, consultation with the organizations if regulations are not being met and the submission of an annual report to the HSA. 
+    {\bf Dangerous Goods Safety Advisor, 2010 - Present} Responsible for ensuring that two organizations adhere to the requirements set out by the European Agreement concerning the International Carriage of Dangerous Goods by Road. Notable aspects include inspection of sites to ensure regulations are being adhered too, consultation with the organizations if regulations are not being met and the submission of an annual report to the HSA. Developed skills include organizing meetings with clients and ensuring that the applicable laws are being adhered too. This is done through a combination of site inspection and questions. I also feel this demonstrates a degree of my entrepreneurial nature and ability to work as an individual.
  
     {\bf Freelance Graphic Design} Notable aspects include; Consulting with clients in order to assess their requirements. Creating of drafts based on clients requirements. Refining draft into final copy.
-
  
     {\bf Secretarial Duties} Notable aspects include: Receival and redirection of messages. Co-ordinating orders from management to employees. Taking in invoices and registering them in database applications.
 
@@ -46,33 +99,28 @@ divoapple@gmail.com}
    
  
 
-\section{EDUCATION}
-\vspace{0.1in} 
- 
-    Trinity College, Dublin, BA(mod),\\ 
-    Computer Science, 2008 - Present\\
-    Junior Freshman achieved II.I\\
-    Senior Freshman achieved II.II\\
-    Junior Sophister achieved II.I \\
- 
-    Sutton Park, Sutton, Dublin, 2002- 2008,\\
-    Leaving certificate obtained in 2008, available on request.\\
-    GCSE in ICT obtained in 2006, available on request.\\
-    
+
      
-\section{SKILLS} 
+\section{Skills and Interests} 
 \vspace{0.1in}
  {\bf Operating Systems}
     \begin{itemize} % Use \item[] to prevent a bullet from appearing
-      \item[] GNU/Linux, primarily Debian based, very good working and theoretical knowledge.\\
+      \item[] GNU/Linux, primarily Debian based, very good working and theoretical knowledge. Have used Debian as a primary OS for over 5 years and enjoy learning about the design of UNIX systems in general.\\
         Windows 7, Vista, XP, very good working knowledge.
       \end{itemize}
 {\bf Programming} 
        \begin{itemize}
         \item[] Very good level of experience programming in C/C++, Java, Bash, Python and Javascript.\\
         I have a good knowledge of OOP concepts and design patterns as well as functional, imperative and declarative programming paradigms.  
-        In addition I have a good working knowledge of Haskell, Prolog, PHP, SQL (Oracle DBMS, IBM DB2 and MySQL), VHDL, Eiffel, CSS, HTML and C\#.
+        In addition I have a good working knowledge of Haskell, Prolog, PHP, SQL (Oracle DBMS, IBM DB2 and MySQL), VHDL, Eiffel, CSS, HTML and C\#.\\
+        I enjoy programming in my free time and have many, many personal projects. These range from micro-controller projects, generative artwork, Ajax driven and static web-design, design of various database schema, JSON parsers, and network programming.\\
+        Also have many projects as a result of university course work. These range from simple compilers, logic puzzles, implementation of various data structures, multi-threaded programs, XML and JSON parsers, SSE programming, a network proxy server, a web-server, an email server and client and database schema.
     \end{itemize}
+
+    {\bf  Teamwork} 
+        \begin{itemize}
+        \item[]  Very good teamwork skills. In addition to developing teamwork skills during my work experience and college projects I have also developed good communication skills during my time at university in general. Almost every project is designed to some degree as a group and implemented as a group or in isolation. I approach each project with enthusiasm, particularly if it's something new and feel my course work marks reflect this.
+       \end{itemize} 
 
   {\bf Design} 
         \begin{itemize}
@@ -85,7 +133,11 @@ divoapple@gmail.com}
        \end{itemize} 
 
  
-
+\section{Referees}
+\vspace{0.1in} 
+ 
+   Available on request.
+    
  
 
 \end{resume}
