--- a/cvNew.tex
+++ b/cvNew.tex
@@ -28,11 +28,11 @@
 February 20, 2010\\*\vspace{10 mm}
 Dear Sir/Madam
 \end{flushleft}
-I am writing in response to your advertised internship position between February 2012 to August 2012.
+I am writing in response to your advertised internship position at Google Ireland in 2012.
 
 I am a fourth year student in Trinity College Dublin studying Computer Science, and expect to graduate from my undergraduate degree course in the summer of 2012 with a I.I. I then plan to go on a pursue a masters in computer science.\\
-I am particularly interested in the advertised post because I would love to work in consulting. The idea of working with new clients and technologies on a regular basis is one that greatly appeals to be.\\
-I feel I am suited to the position because I have very good teamwork, communication and presentation skills. I spent the previous summer working for IBM, which helped develop these skills greatly. In addition I have very good technical skills as outlined in my curriculum vitae. I am based in Dublin but moving around the country is not a problem for me.
+I am particularly interested in the advertised post because I would love to work for one of the most successful companies in the I.T. industry. To me Google seems to be one of the most innovative companies in the industry, with a slew of great products alongside their core business. I would very much like to be a part of such an organization.\\
+I feel I am suited to the position because I have very good teamwork, communication and presentation skills. I spent the previous summer working for IBM, which helped develop these skills greatly. In addition I have very good technical skills as outlined in my curriculum vitae. I more than meet all of the requirements outlined. I am based in Dublin but moving around the country is not a problem for me.
 \\*
 \\*
 I have enclosed my curriculum vitae. If you need any further information, please do not hesitate to contact me. I look forward to hearing from you.\\*
@@ -129,7 +129,7 @@ divoapple@gmail.com}
 
    {\bf  Electronics} 
         \begin{itemize}
-        \item[]  I have some experience working with embedded electronics, primarily the Atmel AVR series of chips.
+        \item[]  I have some experience working with embedded electronics, primarily the Atmel AVR series of chips. I have put together several small projects using the Arduino platform in addition to stock AVR chips. Also have experience with setup and configuration of reasonably complex LANs.
        \end{itemize} 
 
  
