--- a/cvNew.tex
+++ b/cvNew.tex
@@ -28,10 +28,10 @@
 February 20, 2010\\*\vspace{10 mm}
 Dear Sir/Madam
 \end{flushleft}
-I am writing in response to your advertised internship position at Google Ireland in 2012.
+I am writing in response to your advertised internship position at Facebook in 2012.
 
 I am a fourth year student in Trinity College Dublin studying Computer Science, and expect to graduate from my undergraduate degree course in the summer of 2012 with a I.I. I then plan to go on a pursue a masters in computer science.\\
-I am particularly interested in the advertised post because I would love to work for one of the most successful companies in the I.T. industry. To me Google seems to be one of the most innovative companies in the industry, with a slew of great products alongside their core business. I would very much like to be a part of such an organization.\\
+I am particularly interested in the advertised post because I would love to work for one of the most successful companies in the I.T. industry. To me Facebook seems to be one of the most innovative companies in the industry, with a slew of great products alongside their core business. I would very much like to be a part of such an organization.\\
 I feel I am suited to the position because I have very good teamwork, communication and presentation skills. I spent the previous summer working for IBM, which helped develop these skills greatly. In addition I have very good technical skills as outlined in my curriculum vitae. I more than meet all of the requirements outlined. I am based in Dublin but moving around the country is not a problem for me.
 \\*
 \\*
